<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical"
        tools:context="com.damarie.musictheoryquiz.MainActivity">

        <LinearLayout
            style="@style/QuestionContainer"
            android:orientation="vertical"
            android:id="@+id/question_1">

            <TextView
                style="@style/Questions"
                android:text="@string/question1"
                android:id="@+id/question_text_1"/>

            <EditText
                style="@style/AnswerContainer"
                android:id="@+id/question_answer_1"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            style="@style/QuestionContainer"
            android:orientation="vertical"
            android:id="@+id/question_2">

            <TextView
                style="@style/Questions"
                android:text="@string/question2"
                android:id="@+id/question_text_2"/>

            <Spinner
                style="@style/AnswerContainer"
                android:id="@+id/question_answer_2"
                android:inputType="text"/>

        </LinearLayout>

        <RelativeLayout
            style="@style/QuestionContainer"
            android:id="@+id/question_3">

            <TextView
                style="@style/Questions"
                android:text="@string/question3"
                android:id="@+id/question_text_3"/>

            <LinearLayout
                style="@style/AnswerContainer"
                android:id="@+id/question_answers_3"
                android:layout_below="@+id/question_text_3">

                <CheckBox
                    style="@style/Answers"
                    android:text="@string/answer3_a" />

                <CheckBox
                    style="@style/Answers"
                    android:text="@string/answer3_b" />

                <CheckBox
                    style="@style/Answers"
                    android:text="@string/answer3_c" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            style="@style/QuestionContainer"
            android:id="@+id/question_4">

            <TextView
                style="@style/Questions"
                android:text="@string/question4"
                android:id="@+id/question_text_4" />

            <LinearLayout
                style="@style/AnswerContainer"
                android:id="@+id/question_answers_4"
                android:layout_below="@+id/question_text_4" >

                <CheckBox
                    style="@style/Answers"
                    android:text="@string/answer4_a" />

                <CheckBox
                    style="@style/Answers"
                    android:text="@string/answer4_b" />

                <CheckBox
                    style="@style/Answers"
                    android:text="@string/answer4_c" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            style="@style/QuestionContainer"
            android:id="@+id/question_5"
            android:orientation="vertical">

            <TextView
                style="@style/Questions"
                android:text="@string/question5"
                android:id="@+id/question_text_5"/>

            <RadioGroup
                style="@style/AnswerContainer">

                <RadioButton
                    style="@style/Answers"
                    android:text="@string/answer5_a"/>

                <RadioButton
                    style="@style/Answers"
                    android:text="@string/answer5_b"/>

                <RadioButton
                    style="@style/Answers"
                    android:text="@string/answer5_c"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/QuestionContainer"
            android:id="@+id/question_6"
            android:orientation="vertical">

            <TextView
                style="@style/Questions"
                android:text="@string/question6"
                android:id="@+id/question_text_6"/>

            <RadioGroup
                style="@style/AnswerContainer">

                <RadioButton
                    style="@style/Answers"
                    android:text="@string/answer6_a"/>

                <RadioButton
                    style="@style/Answers"
                    android:text="@string/answer6_b"/>

                <RadioButton
                    style="@style/Answers"
                    android:text="@string/answer6_c"/>

            </RadioGroup>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit_button"/>

    </LinearLayout>

</ScrollView>